--- a/QuestStore3/ClientApp/src/app/Components/footer/footer.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <!-- Footer -->
-<footer class="text-center">
+<footer class="footer text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Made by <br> Łukasz | Radek | Adrian | Tomek <br> First version -> <a href="https://www.w3schools.com" data-toggle="tooltip">www.w3schools.com</a></p>
+
+  <p>Made by <br> Łukasz | Radek | Adrian | Tomek</p>
+
 </footer>
