--- a/QuestStore3/ClientApp/src/app/Components/mentor/get-my-students/get-my-students.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/mentor/get-my-students/get-my-students.component.html
@@ -9,6 +9,7 @@
   <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="users">
     <thead>
       <tr>
+        <th> Foto </th>
         <th> Firstname</th>
         <th> Lastname</th>
         <th> E-mail</th>
@@ -24,6 +25,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of users">
+        <td><img src="/team/null.jpg" class="thumbnail-login" alt="foto" width="100" height="50"></td>
         <td>{{ user.firstName }}</td>
         <td>{{ user.lastName }}</td>
         <td>{{ user.email }}</td>
