--- a/QuestStore3/ClientApp/src/styles.css
+++ b/QuestStore3/ClientApp/src/styles.css
@@ -47,12 +47,15 @@ h3, h4 {
 }
 
 .person {
-/*  border: 10px solid transparent;
-*/  margin-bottom: 25px;
+  border: 10px solid transparent;
+  border-color: #f1f1f1;
+  -webkit-filter: grayscale(90%);
+  filter: grayscale(90%);
+  margin-bottom: 25px;
   width: 100%;
   height: 100%;
-/*  opacity: 0.7;
-*/}
+  /*opacity: 0.7;*/
+}
 
   .person:hover {
     border-color: #f1f1f1;
@@ -74,6 +77,10 @@ h3, h4 {
 .carousel-caption a {
   color: #fff !important;
   text-shadow: 1px 1px #2d2d30;
+}
+
+.footer p {
+  color: #fff !important;
 }
 
 @media (max-width: 600px) {
@@ -137,8 +144,21 @@ h3, h4 {
   border-radius: 2px;
 }
 
+.thumbnail-login {
+  border: 1px solid #2d2d30;
+  border-radius: 2px;
+}
+
+
+  .thumbnail-login img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+
+}
+
   .thumbnail p {
-    margin-top: 15px;
+    margin: 15px;
     color: #555;
   }
 
